# ChangeLog for media-plugins/gst-plugins-x
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-x/ChangeLog,v 1.39 2008/02/01 12:45:47 drac Exp $

*gst-plugins-x-0.10.17 (01 Feb 2008)

  01 Feb 2008; Samuli Suominen <drac@gentoo.org>
  -gst-plugins-x-0.10.11.ebuild, -gst-plugins-x-0.10.15.ebuild,
  +gst-plugins-x-0.10.17.ebuild:
  Version bump.

*gst-plugins-x-0.10.15 (17 Nov 2007)

  17 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +gst-plugins-x-0.10.15.ebuild:
  Version bump.

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-x-0.10.14.ebuild:
  sparc stable wrt #190900, thanks to Alex Maclean for testing

  11 Oct 2007; Markus Rothe <corsair@gentoo.org>
  gst-plugins-x-0.10.14.ebuild:
  Stable on ppc64; bug #190900

  26 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-x-0.10.14.ebuild:
  alpha/ia64 stable wrt #190900

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gst-plugins-x-0.10.14.ebuild:
  Stable on amd64 wrt bug #190900.

  10 Sep 2007; nixnut <nixnut@gentoo.org> gst-plugins-x-0.10.14.ebuild:
  Stable on ppc wrt bug 190900

  09 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  gst-plugins-x-0.10.14.ebuild:
  x86 stable, bug 190900

  03 Sep 2007; Jeroen Roovers <jer@gentoo.org> gst-plugins-x-0.10.14.ebuild:
  Stable for HPPA (bug #190900).

*gst-plugins-x-0.10.14 (31 Aug 2007)

  31 Aug 2007; Samuli Suominen <drac@gentoo.org>
  +gst-plugins-x-0.10.14.ebuild:
  Version bump.

  26 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-x-0.10.12.ebuild:
  Stable on sparc

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  gst-plugins-x-0.10.4.ebuild, gst-plugins-x-0.10.6.ebuild,
  gst-plugins-x-0.10.7.ebuild, gst-plugins-x-0.10.9.ebuild,
  gst-plugins-x-0.10.10.ebuild, gst-plugins-x-0.10.11.ebuild,
  gst-plugins-x-0.10.12.ebuild:
  Drop virtual/x11 references.

  28 Jun 2007; Joseph Jezak <josejx@gentoo.org>