@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-x
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-x/ChangeLog,v 1.39 2008/02/01 12:45:47 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-x/ChangeLog,v 1.40 2008/06/29 14:58:43 drac Exp $
+
+*gst-plugins-x-0.10.20 (29 Jun 2008)
+
+  29 Jun 2008; Samuli Suominen <drac@gentoo.org>
+  +gst-plugins-x-0.10.20.ebuild:
+  Version bump.
 
 *gst-plugins-x-0.10.17 (01 Feb 2008)
 
